# clickup-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  clickup-config.example.json  pyproject.toml
.claude/: settings.json
.claude/agents/: api-compatibility-checker.md  test-writer.md
.claude/skills/: add-command.md  clickup-cli.md
.claude/skills/changelog/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/validate-output/: SKILL.md
.github/workflows/: ci.yml
scripts/: validate-cli-output.sh
src/clickup_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  helpers.py
src/clickup_cli/commands/: __init__.py  comments.py  docs.py  folders.py  init.py  lists.py  spaces.py  tags.py  tasks.py  team.py
tests/: conftest.py  test_cli.py  test_client.py  test_commands.py  test_config.py  test_helpers.py
